# ha-cadvisor

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml
custom_components/cadvisor/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/cadvisor/translations/: en.json
